# uni

./: .gitignore  API_REFERENCE.md  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  UCAO_REVIEW_AND_IMPLEMENTATION.md  benchmark.cpp  benchmark_hpc.cpp  build.bat  build.sh  coverage.sh  install.bat  install.ps1  install.sh  test_autograd.cpp  test_models_smoke.cpp
.github/workflows/: ci.yml  release.yml
cmake/: create_symlink.cmake.in  ucao.cmake  unified_ml.pc.in  unified_mlConfig.cmake.in  uninstall.cmake.in
docs/: ARCHITECTURE.md  BUILD_AND_RELEASE.md  PRODUCTION_READINESS_REVIEW_2026-04-24.md  RELEASE_LAYOUT.txt  SLE_DISTILLED_ARTIFACT_CONTRACT.md  SLE_L3_OPERATIONAL_PLAYBOOK.md  SLE_L3_PREFLIGHT.md  SLE_LEVEL2_BENCHMARKS.md  SLE_RND_ROADMAP.md  STABILITY_CONTRACTS.md
examples/basic_usage/: CMakeLists.txt  main.cpp
examples/fetchcontent/: CMakeLists.txt  main.cpp
examples/install_test/: CMakeLists.txt  main.cpp
examples/ucao_showcase/: CMakeLists.txt  main.cpp
include/: sle_backend.hpp  unified_ml_distillation.hpp  unified_ml_stable.hpp
include/autograd/: aligned_buffer.hpp  node.h  tensor.h
include/core/: bit_packing.hpp  compat.hpp  hpc_kernels.hpp  hugepage_buffer.hpp  linalg.hpp  sdk_common.hpp  span_compat.hpp
include/models/deep_onet/: layers.hpp  model.hpp
include/models/gp/: gaussian_process.hpp
include/models/pinn/: pinn_solver.hpp
include/models/sle/: distillation.hpp
include/models/svm/: svm.hpp
include/models/xgboost/: xgboost_enhanced.hpp
include/models/xgboost/utils/: csv_reader.hpp  logger.hpp
include/ucao/: engine_policy.hpp
include/ucao/combat/: motor_kinematics.hpp
include/ucao/kernel/: blade_kernel.hpp  dual_mv.hpp  fp_multivector.hpp  mv_tensor.hpp
include/ucao/pinn/: field_layer.hpp
packaging/conan/: conanfile.py
packaging/conan/test_package/: CMakeLists.txt  conanfile.py  main.cpp
packaging/vcpkg/: portfile.cmake  usage  vcpkg.json
python/: CMakeLists.txt  bindings.cpp
sle_engine/include/sle/: bit_vector.hpp
sle_engine/src/: encoding.cpp  full_engine.cpp  jit.cpp  jit_trainer.cpp  synthesis.cpp
src/autograd/: functional.cpp  tensor.cpp
src/core/: linalg.cpp  optimizers.cpp  random.cpp
src/models/deep_onet/: branch_net.cpp  layers.cpp  model.cpp  trunk_net.cpp  utils.cpp
src/models/mlp/: linear.cpp
src/models/pinn/: pinn_solver.cpp
src/models/sindy/: sindy.cpp
src/models/svm/: svm.cpp
src/models/xgboost/: xgboost_enhanced.cpp
src/models/xgboost/booster/: trainer_v2.cpp
src/models/xgboost/callback/: callback.cpp
src/models/xgboost/utils/: logger.cpp
tests/: repro_sle_empty_candidates.cpp  test_core_activations.cpp  test_core_linalg.cpp  test_core_optimizers.cpp  test_core_random.cpp  test_sle_distillation_diagnostics.cpp  test_sle_distillation_edge_cases.cpp  test_sle_level2_utility.cpp  test_sle_safe_mode_and_repro.cpp  test_ucao_combat.cpp  test_ucao_kernel.cpp  test_ucao_pinn.cpp  test_unified_facade_smoke.cpp  test_xgboost_units.cpp  ucao_demo.cpp
tests/data/: sle_level2_manifest.csv
tools/: perf_baseline.json  perf_gate.py  sle_l3_preflight.py
